--- a/diesel.toml
+++ b/diesel.toml
@@ -1,9 +1,7 @@
-# For documentation on how to configure this file,
-# see https://diesel.rs/guides/configuring-diesel-cli
-
 [print_schema]
-file = "src/schema.rs"
+file = "src/core/schema.rs"
 custom_type_derives = ["diesel::query_builder::QueryId"]
+schema = "eventus"
 
 [migrations_directory]
 dir = "migrations"
