--- a/config/application.yml
+++ b/config/application.yml
@@ -1,1 +1,12 @@
+datasource:
+  postgres:
+    hostname: localhost
+    port: 5432
+    user: postgres
+    password: postgres
+    database: eventus
+logger:
+  level: debug
+  output:
+    mode: Console
 profile: dev
