Finished code structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-askama = "0.12.1"  # HTML templating engine
-axum = "0.7.4"  # Web framework
-axum-login = "0.13.1"  # Axum session add-on
-bcrypt = "0.15.0"  # BCrypt implementation
-chrono = "0.4.24"  # Extended date and time
-config = "0.14.0"  # Externalized configuration loader
-diesel = { version = "2.1.4", features = ["chrono"] }  # ORM
-diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }  # ORM async add-on
-serde = { version = "1.0.196", features = ["derive"] }  # Serialization
-tokio = { version = "1.36.0", features = ["full"] }  # Runtime
-tower-http = { version = "0.5.1", features = ["fs", "trace", "compression-gzip"] }  # Web utilities
-tracing = "0.1.40"  # Logging
-tracing-appender = "0.2.3"  # Logging
-tracing-subscriber = "0.3.18"  # Logging
+# Runtime
+tokio = { version = "1.36.0", features = ["full"] }
+# Web Framework
+axum = "0.7.4"
+tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-gzip"] }
+# Database
+diesel = { version = "2.1.4", features = ["chrono"] }
+diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
+# Serialization
+serde = { version = "1.0.196", features = ["derive"] }
+# Web Framework - Template engine
+askama = "0.12.1"
+# Runtime - Logging
+tracing = "0.1.40"
+tracing-appender = "0.2.3"
+tracing-subscriber = "0.3.18"
+# Utilities
+bcrypt = "0.15.0"
+chrono = "0.4.34"
+config = "0.14.0"
 
 [profile.release]
 strip = true
