--- a/diesel.toml
+++ b/diesel.toml
@@ -1,5 +1,5 @@
 [print_schema]
-file = "src/core/schema.rs"
+file = "src/api/schema.rs"
 custom_type_derives = ["diesel::query_builder::QueryId"]
 schema = "eventus"
 
