Server is alive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,13 @@ tokio = { version = "1.36.0", features = ["full"] }
 # Web Framework
 axum = "0.7.4"
 tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-gzip"] }
+tower-sessions = "0.10.4"
+tower-sessions-redis-store = "0.10.0"
 # Database
 diesel = { version = "2.1.4", features = ["chrono"] }
 diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
 # Serialization
-serde = { version = "1.0.196", features = ["derive"] }
+serde = { version = "1.0.197", features = ["derive"] }
 # Web Framework - Template engine
 askama = "0.12.1"
 # Runtime - Logging
